机修页面新增搜索框 地位下拉列表 可切换按钮 菜单栏选项及图表 新增了报告单页面 确认交易页面 实现支付方式单选 还有一些页面小改动

--- a/account.html
+++ b/account.html
@@ -13,14 +13,14 @@
 		<li class="info-list">
 			<a href="./my_blance.html">
 				<span>我的余额</span>
-				<span class="icon-arrow-r more"></span>
+				<i class="icon-arrow-r more"></i>
 				<span class="fr">50.00元</span>
 			</a>
 		</li>
 		<li class="info-list">
 			<a href="./my_bank_card.html">
 				<span>我的银行卡</span>
-				<span class="icon-arrow-r more"></span>
+				<i class="icon-arrow-r more"></i>
 				<span class="fr">2</span>
 			</a>
 		</li>
