--- a/address_list.html
+++ b/address_list.html
@@ -39,7 +39,9 @@
 			</div>
 		</li>
 	</ul>
-	<a href='./address_management.html' class="btn btn-default btn-fixed">新增地址</a>
+	<div class="btn-fixed">
+		<a href='./address_management.html' class="btn btn-default">新增地址</a>
+	</div>
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
