--- a/apply_order_detail.html
+++ b/apply_order_detail.html
@@ -13,7 +13,7 @@
 	<div class="swiper-container detail-swiper">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide">
-				<img src="./images/cloth-1.png" alt="">
+				<img src="./images/cloth-1.png">
 			</div>
 			<div class="swiper-slide">
 				123
