--- a/lease_step2.html
+++ b/lease_step2.html
@@ -32,13 +32,13 @@
 	<ul class="info-wrapper">
 		<li class="info-list">
 			<span class="info-item">单针平缝机</span>
-			<span id="picker1" class='btn btn-span fr'><span class="hui">数量</span></span>
-			<span id="picker2" class='btn btn-span fr'><span class="hui">9成新</span></span>
+			<input type="number" placeholder="数量" class="btn btn-span fr">
+			<span id="picker1" class='btn btn-span fr'><span class="hui">9成新</span></span>
 		</li>
 		<li class="info-list">
 			<span class="info-item">双针平缝机</span>
-			<span id="picker3" class='btn btn-span fr'><span class="hui">数量</span></span>
-			<span id="picker4" class='btn btn-span fr'><span class="hui">9成新</span></span>
+			<input type="number" placeholder="数量" class="btn btn-span fr">
+			<span id="picker2" class='btn btn-span fr'><span class="hui">9成新</span></span>
 		</li>
 	</ul>
 	<div class="p-title">收货地址</div>
