--- a/my_order.html
+++ b/my_order.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src='./js/normalize.js'></script>
 </head>
 <body>
-	<div class='nav-wrapper clearfix'>
+	<div class='nav-5 clearfix'>
 		<a href="./my_order.html" class='nav-item fl nav-item-active'>全部</a>
 		<a href="" class='nav-item fl'>代付款</a>
 		<a href="./to_accept_order.html" class='nav-item fl'>待收货</a>
