--- a/order.html
+++ b/order.html
@@ -14,7 +14,28 @@
 		<a href="./position.html" class='nav-item fl'>机修</a>
 		<a href="./lease.html" class='nav-item fl'>租赁</a>
 		<a href="./order.html" class='nav-item fl nav-item-active'>订单</a>
-		<a href="" class='nav-item fl'><i class="icon-menu"></i></a>
+		<a href="javascript:;" class='nav-item menu fl'><i class="icon-menu"></i></a>
+	</div>
+	<div class="menu-wrapper">
+		<div class="menu-header blur">
+			<a href="./personal_data.html" class='fl'><i class='icon-user'></i></a>
+			<i class="serve">全部服务</i>
+			<i class="icon-X close"></i>
+		</div>
+		<div class="menu-list">
+			<a href="#">
+				<i class="icon-repair"></i>
+				<p>机修</p>
+			</a>
+			<a href="#">
+				<i class="icon-lease"></i>
+				<p>租赁</p>
+			</a>
+			<a href="#">
+				<i class="icon-order"></i>
+				<p>订单</p>
+			</a>
+		</div>
 	</div>
 	<div class="bg-wrapper" id="lease">
 		<img class="bg-height" src="./images/repair-order.png">
