--- a/pay.html
+++ b/pay.html
@@ -19,17 +19,20 @@
 		</li>
 		<li class="info-list">
 			<span class="text">请输入小费/零件费：</span>
-			<span class='btn btn-span fr'><span class="hui">0.00元</span></span>
+			<span class='btn btn-span free'>
+				<input type="num" placeholder="0.00">
+				<span class="hui">元</span>
+			</span>
 		</li>
 	</ul>
 	<div class="p-title">选择支付方式</div>
 	<ul class="info-wrapper">
-		<li class="info-list info-check">
+		<li class="info-list info-radio">
 			<i class="icon-wechat"></i>
 			<span class="info-item">微信支付</span>
 			<i class="icon-check checked"></i>
 		</li>
-		<li class="info-list info-check">
+		<li class="info-list info-radio">
 			<i class='icon-money'></i>
 			<span class="info-item">余额支付</span>
 			<i class="icon-check checked"></i>
