--- a/repair.html
+++ b/repair.html
@@ -50,7 +50,7 @@
 		<span>已阅读并同意<a href="#">《相关条约》</a></span>
 	</div>
 	<a href="./into_lease.html" class="btn btn-default btn-bottom">保存</a>
-	<div class="explain">
+	<div class="explain-b">
 		<p>本服务由云衣尚提供底层技术支持</p>
 	</div>
 
