--- a/repair_detail_voice.html
+++ b/repair_detail_voice.html
@@ -19,15 +19,23 @@
 		<button class='btn btn-s  fl problem-item'>电脑系统故障</button>
 	</div>
 	<div class='problem-voice clearfix'>
-		<div class="speak-box-c">
+		<div class="speak-box-c recode" >
 			<div class="play play-b">
 					<div class="oval oval-b">
 						<i class="icon-speak triangle speak"></i>
+						<div class="preloader_1">
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
 					</div>
 			</div>
-			<p class='text-explain'>长按进行语音报修</p>
+			<p class='text-explain-1'>长按进行语音报修</p>
+			<p class='text-explain-2'>正在录音中···点击停止</p>
 		</div>
-		<div style="display: none;">
+		<div class='play_and_remark' style="display: none;">
 			<div class="speak-box">
 				<div class="play play-b">
 					<div class="oval oval-b">
@@ -40,6 +48,13 @@
 				<div class="play play-b">
 					<div class="oval oval-b">
 						<i class="icon-speak triangle speak"></i>
+						<div class="preloader_1">
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
 					</div>
 				</div>
 				<p class='text-explain'>长按重录</p>
