--- a/repaired.html
+++ b/repaired.html
@@ -29,7 +29,7 @@
 			</li>
 			<li class="info-list play-father">
 				<span class="info-left">问题</span>
-				<span class="info-right">不剪线</span>
+				<span class="info-right overflow">不剪线,电脑故障，头卡线，进水，机头卡死不能动,电脑故障，头卡线，进水，机头卡死不能动</span>
 				<div class="play play-s play-position">
 					<div class="oval oval-s">
 						<i class="icon-Triangle triangle triangle-s"></i>
@@ -38,7 +38,7 @@
 			</li>
 		</ul>
 	<div class="p-title">维修师傅</div>
-	<div class="pt-wrapper clearfix">
+	<a href="./repairer_info.html" class="pt-wrapper a-block clearfix">
 		<div class="pt-pic avatar">
 			<img src="./images/avatar.png">
 		</div>
@@ -54,7 +54,7 @@
 			</p>
 		</div>
 		<span class="icon-arrow-r more-middle"></span>
-	</div>
+	</a>
 	<div class="p-title">报修人</div>
 	<ul class="info-wrapper">
 		<li class="info-list">
