--- a/repairer_info.html
+++ b/repairer_info.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="pt-wrapper p-info clearfix">
 		<div class="pt-pic fl">
-			<img src="./images/avatar3.png">
+			<img src="./images/avatar3.png" class="avatar3">
 		</div>
 		<div class="pt-text fl">
 			<span class="pt-title pt-v-t pt-18 mr-20">头像</span>
@@ -46,7 +46,7 @@
 		</li>
 		<li class="info-list info-rating clearfix">
 			<p class="info-left fl">评价</p>
-			<ul class="rating rating-s clearfix fl" id="rating">
+			<ul class="rating rating-s clearfix fl" id="rating-1">
 				<li class="rating-item rating-item-s" title="很不好"></li>
 				<li class="rating-item rating-item-s" title="不好"></li>
 				<li class="rating-item rating-item-s" title="一般"></li>
@@ -56,26 +56,26 @@
 		</li>
 		<li class="info-list info-h clearfix">
 			<div class="info-right clearfix">
-				<img src="./images/users-1.png" class="fl">
+				<img src="./images/users-1.png" class="img-users fl">
 				<div class="right-desc fl">
 					<p class="">低调<span class="fr">2017-10-09</span></p>
-					<ul class="rating rating-xs clearfix" id="rating">
+					<ul class="rating rating-xs clearfix" id="rating-2">
 						<li class="rating-item rating-item-xs" title="很不好"></li>
 						<li class="rating-item rating-item-xs" title="不好"></li>
 						<li class="rating-item rating-item-xs" title="一般"></li>
 						<li class="rating-item rating-item-xs" title="好"></li>
 						<li class="rating-item rating-item-xs" title="很好"></li>
 					</ul>
-					<p class='dis'>准时达，专业专注，礼貌用语，按时完成.</p>
+					<p class='dis'>准时达，专业专注，礼貌用语，按时完成。</p>
 				</div>
 			</div>
 		</li>
 		<li class="info-list info-h clearfix">
 			<div class="info-right clearfix">
-				<img src="./images/users-2.png" class="fl">
+				<img src="./images/users-2.png" class="img-users fl">
 				<div class="right-desc fl">
 					<p class="">低调<span class="fr">2017-10-09</span></p>
-					<ul class="rating rating-xs clearfix" id="rating">
+					<ul class="rating rating-xs clearfix" id="rating-3">
 						<li class="rating-item rating-item-xs" title="很不好"></li>
 						<li class="rating-item rating-item-xs" title="不好"></li>
 						<li class="rating-item rating-item-xs" title="一般"></li>
