--- a/order_for_repirer.html
+++ b/order_for_repirer.html
@@ -9,6 +9,14 @@
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
 <body>
+	<div class=' clearfix nav-6'>
+		<a href='./temporary.html' class='nav-item fl nav-item-active'>全部</a>
+		<a href='./waiting_repair.html' class='nav-item fl'>待维修</a>
+		<a href='#S' class='nav-item fl'>待付款</a>
+		<a href='./repaired.html' class='nav-item fl'>已完成</a>
+		<a href='#' class='nav-item fl'>已取消</a>
+		<a href='./rating.html' class='nav-item fl'>评价</a>
+	</div>
 	<div class="order">
 		<p class="order-title">订单号：<span>2817644777779</span><span>已付款</span></p>
 		<div class="text-show clearfix order-bg">
