--- a/personal_data.html
+++ b/personal_data.html
@@ -11,7 +11,7 @@
 <body>
 	<a href="./edit_data.html" class="pt-wrapper p-info clearfix a-block">
 		<div class="pt-pic">
-			<img src="./images/avatar3.png">
+			<img src="./images/avatar3.png" class="avatar3">
 		</div>
 		<div class="pt-text">
 			<p class="pt-title pt-18">李雷
