--- a/waiting_process.html
+++ b/waiting_process.html
@@ -17,19 +17,19 @@
 	<ul class="info-wrapper">
 		<li class="info-list">
 			<span class="info-left">类型</span>
-			<input type='text' placeholder="单针平缝针" class="info-right"></input>
+			<span class="info-right">单针平缝针</span>
 		</li>
 		<li class="info-list">
 			<span class="info-left">品牌</span>
-			<input type='text' placeholder="兄弟" class="info-right"></input>
+			<span class="info-right">兄弟</span>
 		</li>
 		<li class="info-list">
 			<span class="info-left">型号</span>
-			<input type='text' placeholder="F7300A" class="info-right"></input>
+			<span class="info-right">F7300A</span>
 		</li>
 		<li class="info-list play-father">
 			<span class="info-left">问题</span>
-			<input type='text' placeholder="不剪线" class="info-right"></input>
+			<span class="info-right overflow">不剪线</span>
 			<div class="play play-s play-position">
 				<div class="oval oval-s">
 					<i class="icon-Triangle triangle triangle-s"></i>
