新增图标i信息提示功能 增加到达时间页面 优化了导航条显示个数问题 增加了选中状态以及对其他一些页面做了一些细节调整

--- a/address_detail.html
+++ b/address_detail.html
@@ -14,8 +14,9 @@
 		<span class=''>选择详细地址</span>
 		<span class="icon-arrow-r more"></span>
 	</a>
-	<a href="#" class="btn btn-default btn-fixed">发布</a>
-
+	<div class="btn-fixed">
+		<a href='#' class="btn btn-default">发布</a>
+	</div>
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src='./js/public.js'></script>
 </body>
