--- a/certification_c.html
+++ b/certification_c.html
@@ -40,7 +40,7 @@
 		<div class="upload_wrapper">
 			<label for="upload-1" class="upload_content block">
 				<div class="upload_add">
-					<img src="./images/add.png" class="upload_icon">
+					<img src="./images/add@2x.png" class="upload_icon">
 					<div class="upload_disc">上传营业照</div>
 					<input type="file" id='upload-1' style='display: none' accept="image/gif,image/jpeg,image/jpg,image/png">
 				</div>
@@ -50,7 +50,7 @@
 		<div class="upload_wrapper">
 			<label for="upload-2" class="upload_content block">
 				<div class="upload_add">
-					<img src="./images/add.png" class="upload_icon">
+					<img src="./images/add@2x.png" class="upload_icon">
 					<div class="upload_disc">上传开户许可证</div>
 					<input type="file" id='upload-2' style='display: none' accept="image/gif,image/jpeg,image/jpg,image/png">
 				</div>
