--- a/certification_p.html
+++ b/certification_p.html
@@ -37,7 +37,7 @@
 		<div class="upload_wrapper">
 			<label for='upload-1' class="upload_content block">
 				<div class="upload_add">
-					<img src="./images/add.png" class="upload_icon">
+					<img src="./images/add@2x.png" class="upload_icon">
 					<div class="upload_disc">上传身份证正面</div>
 					<input type="file" id='upload-1' style='display: none' accept="image/gif,image/jpeg,image/jpg,image/png">
 
@@ -45,7 +45,7 @@
 			</label>
 			<div class="upload_content">
 				<label for='upload-2' class="upload_add block">
-					<img src="./images/add.png" class="upload_icon">
+					<img src="./images/add@2x.png" class="upload_icon">
 					<div class="upload_disc">上传身份证反面</div>
 					<input type="file" id='upload-2' style='display: none' accept="image/gif,image/jpeg,image/jpg,image/png">
 				</div>
