--- a/lease_step2.html
+++ b/lease_step2.html
@@ -49,13 +49,13 @@
 	<div class="p-title">起租日期</div>
 	<label for='date' class='select-text block'>
 		<span class="time-container time-placeholder w-16">选择起租日期</span>
-		<input type="date" class="date" id="date" style="opacity: 0;">
+		<input type="date" class="date" id="date" style="opacity: 0; height: 1.1rem">
 		<span class="icon-arrow-r more"></span>
 	</label>
 	<div class="p-title">还租日期</div>
 	<label for='date-1' class='select-text block'>
 		<span class="time-container time-placeholder w-16">选择还租日期</span>
-		<input type="date" class="date" id="date-1" style="opacity: 0;">
+		<input type="date" class="date" id="date-1" style="opacity: 0; height: 1.1rem">
 		<span class="icon-arrow-r more"></span>
 	</label>
 	<a href="./lease_step3.html" class="btn btn-default btn-top">下一步</a>
