--- a/lease_step3.html
+++ b/lease_step3.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width,maximum-scale=1,user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
@@ -32,13 +33,15 @@
 	<ul class="info-wrapper">
 		<li class="info-list">
 			<span class="info-item">单针平缝机</span>
-			<i class="icon-i istyle"></i>
+			<!-- <i tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i> -->
+
+			<i tabindex="0" class="icon-i istyle" role="button" data-toggle="popover" data-trigger="focus" data-placement="top" data-content="120元/天"></i>
 			<button class='btn btn-xs  fr btn-r'>数量</button>
 			<button class='btn btn-xs  fr btn-r'>9成新</button>
 		</li>
 		<li class="info-list">
 			<span class="info-item">双针平缝机</span>
-			<i class="icon-i istyle"></i>
+			<i tabindex="1" role='button' class="icon-i istyle" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
 			<button class='btn btn-xs  fr btn-r'>数量</button>
 			<button class='btn btn-xs  fr btn-r'>2成新</button>
 		</li>
@@ -73,6 +76,7 @@
 			<span class="info-right">30 天</span>
 		</li>
 	</ul>
+
 	<div class="clearfix cost">
 		<p class="fl total">费用合计</p>
 		<p class="fr number">210.00元</p>
@@ -80,9 +84,8 @@
 		<a href="./pay_success.html" class="btn btn-top btn-default">微信支付</a>
 		<a href="#" class="btn btn-bottom btn-white">货到付款</a>
 
-
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
+	<script type="text/javascript" src='./js/bootstrap.min.js'></script>
 	<script type="text/javascript" src="./js/public.js"></script>
-
 </body>
 </html>
