--- a/my_order.html
+++ b/my_order.html
@@ -5,11 +5,12 @@
 	<meta name="viewport" content="width=device-width,maximum-scale=1,user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src='./js/normalize.js'></script>
 </head>
 <body>
-	<div class='nav-5 clearfix'>
+	<div class='nav-wrapper clearfix'>
 		<a href="./my_order.html" class='nav-item fl nav-item-active'>全部</a>
 		<a href="" class='nav-item fl'>代付款</a>
 		<a href="./to_accept_order.html" class='nav-item fl'>待收货</a>
@@ -21,14 +22,14 @@
 		<ul class="info-wrapper bg-white">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
-				<i class="icon-i istyle"></i>
+				<a tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></a>
 				<span class='fr eqm-text'>X5</span>
 				<span class='fr eqm-text'>9成新</span>
 			</li>
 			<li class="info-list">
 				<span class="info-item">双针平缝机</span>
-				<i class="icon-i istyle"></i>
-				<span class='fr eqm-text'>X10</span>>
+				<i tabindex="0" role='button' class="icon-i istyle" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
+				<span class='fr eqm-text'>X10</span>
 				<span class='fr eqm-text'>2成新</span>
 			</li>
 		</ul>
@@ -44,14 +45,14 @@
 		<ul class="info-wrapper bg-white">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
-				<i class="icon-i istyle"></i>
+				<i tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
 				<span class='fr eqm-text'>X5</span>
 				<span class='fr eqm-text'>9成新</span>
 			</li>
 			<li class="info-list">
 				<span class="info-item">双针平缝机</span>
-				<i class="icon-i istyle"></i>
-				<span class='fr eqm-text'>X10</span>>
+				<i tabindex="0" role='button' class="icon-i istyle" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
+				<span class='fr eqm-text'>X10</span>
 				<span class='fr eqm-text'>2成新</span>
 			</li>
 		</ul>
@@ -66,14 +67,14 @@
 		<ul class="info-wrapper bg-white">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
-				<i class="icon-i istyle"></i>
+				<i tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
 				<span class='fr eqm-text'>X5</span>
 				<span class='fr eqm-text'>9成新</span>
 			</li>
 			<li class="info-list">
 				<span class="info-item">双针平缝机</span>
-				<i class="icon-i istyle"></i>
-				<span class='fr eqm-text'>X10</span>>
+				<i tabindex="0" role='button' class="icon-i istyle" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
+				<span class='fr eqm-text'>X10</span>
 				<span class='fr eqm-text'>2成新</span>
 			</li>
 		</ul>
@@ -84,14 +85,14 @@
 		<ul class="info-wrapper bg-white">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
-				<i class="icon-i istyle"></i>
+				<i tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
 				<span class='fr eqm-text'>X5</span>
 				<span class='fr eqm-text'>9成新</span>
 			</li>
 			<li class="info-list">
 				<span class="info-item">双针平缝机</span>
-				<i class="icon-i istyle"></i>
-				<span class='fr eqm-text'>X10</span>>
+				<i tabindex="0" role='button' class="icon-i istyle" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
+				<span class='fr eqm-text'>X10</span>
 				<span class='fr eqm-text'>2成新</span>
 			</li>
 		</ul>
@@ -99,6 +100,7 @@
 	</div>
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
+	<script type="text/javascript" src='./js/bootstrap.min.js'></script>
 	<script type="text/javascript" src="./js/public.js"></script>
 </body>
 </html>
