--- a/repair_brand.html
+++ b/repair_brand.html
@@ -15,22 +15,22 @@
 		<i class="icon-search"></i>
 	</div>
 	<ul class="info-wrapper">
-		<li class="info-list">
-			<a href="./repair_model.html" class="info-item">兄弟</a>
+		<li class="info-list info-p-i">
+			<a href="javascript:;" class="info-item">兄弟</a>
 		</li>
-		<li class="info-list">
-			<a href="./repair_model.html" class="info-item">标准</a>
+		<li class="info-list info-p-i selected">
+			<a href="javascript:;" class="info-item">标准</a>
 		</li>
-		<li class="info-list">
-			<a href="./repair_model.html" class="info-item">海菱</a>
+		<li class="info-list info-p-i">
+			<a href="javascript:;" class="info-item">海菱</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href="./repair_model.html" class="info-item">飞马</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href="./repair_model.html" class="info-item">杰克</a>
 		</li>
-		<li class="info-list">
+		<li class="info-list info-p-i">
 			<a href="./repair_model.html" class="info-item">其他</a>
 		</li>
 	</ul>
