--- a/to_accept_order.html
+++ b/to_accept_order.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width,maximum-scale=1,user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
@@ -17,13 +18,13 @@
 	<ul class="info-wrapper">
 		<li class="info-list">
 			<span class="info-item">单针平缝机</span>
-			<i class="icon-i istyle"></i>
+			<i tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
 			<span class='fr eqm-text'>5件</span>
 			<span class='fr eqm-text'>9成新</span>
 		</li>
 		<li class="info-list">
 			<span class="info-item">双针平缝机</span>
-			<i class="icon-i istyle"></i>
+			<i tabindex="0" role='button' class="icon-i istyle" data-placement="bottom" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
 			<span class='fr eqm-text'>10件</span>>
 			<span class='fr eqm-text'>2成新</span>
 		</li>
@@ -59,12 +60,14 @@
 		</li>
 	</ul>
 	<div class="clearfix cost">
-		<p class="fl total">费用合计</p>
-		<p class="fr number">210.00元</p>
+		<p class="total">费用合计</p>
+		<p class='payornot'>(货到付款)</p>
+		<p class="number">210.00元</p>
 	</div>
 		<a href='#' class="btn btn-top btn-default">确认收货</a>
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
+	<script type="text/javascript" src='./js/bootstrap.min.js'></script>
 	<script type="text/javascript" src="./js/public.js"></script>
 </body>
 </html>
