--- a/user_info.html
+++ b/user_info.html
@@ -50,6 +50,12 @@
 						<span>暂存订单</span>
 					</a>
 				</li>
+				<li>
+					<a href="./order_for_repirer.html">
+						<i class="icon-my-order"></i>
+						<span>我的工单</span>
+					</a>
+				</li>
 			</ul>
 			<div class="user-c clearfix">
 				<a href='./message.html' class="fl">
