--- a/waiting_repair.html
+++ b/waiting_repair.html
@@ -53,6 +53,19 @@
 		</div>
 		<span class="icon-arrow-r more-middle"></span>
 	</a>
+	<ul class="info-wrapper">
+		<li class="info-list">
+			<span class="info-left info-left-width">联系电话</span>
+			<span class="info-right">18712345678</span>
+			<button class='btn btn-s call'>马上联系</button>
+		</li>
+	</ul>
+	<ul class="info-wrapper">
+		<li class="info-list">
+			<span class="info-left info-left-width">到达时间</span>
+			<span class="info-right">2017-10-25 18:30</span>
+		</li>
+	</ul>
 	<div class="p-title">报修人</div>
 	<ul class="info-wrapper">
 		<li class="info-list">
