--- a/worksheet_detail.html
+++ b/worksheet_detail.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width,maximum-scale=1,user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="./node_modules/swiper/dist/css/swiper.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/swiper.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
@@ -71,7 +71,7 @@
 
 
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
-	<script type="text/javascript" src="./node_modules/swiper/dist/js/swiper.min.js"></script>
+	<script type="text/javascript" src="./js/swiper.min.js"></script>
 	<script type="text/javascript" src="./js/city.js"></script>
 	<script src="./js/picker.min.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
