--- a/my_bank_card.html
+++ b/my_bank_card.html
@@ -19,8 +19,9 @@
 		<p class="title-bottom repairing-bottom">**** **** **** ***8 999</p>
 		<a href="#" class="unbunding">解绑</a>
 	</div>
-	<a href="./bund_bank_card.html" class="btn btn-default btn-fixed">绑定银行卡</a>
-
+	<div class="btn-fixed">
+		<a href="./bund_bank_card.html" class="btn btn-default">绑定银行卡</a>
+	</div>
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
 </body>
