--- a/position.html
+++ b/position.html
@@ -9,14 +9,14 @@
 	<script type="text/javascript" src="./js/normalize.js"></script>
 </head>
 <body>
-	<div class='nav-wrapper blur clearfix'>
+	<div class='nav-wrapper clearfix'>
 		<a href="./personal_data.html" class='nav-item fl'><i class='icon-user'></i></a>
 		<a href="./position.html" class='nav-item fl nav-item-active'>机修</a>
 		<a href="./lease.html" class='nav-item fl'>租赁</a>
 		<a href="./order.html" class='nav-item fl'>订单</a>
 		<a href="javascript:;" class='nav-item fl menu'><i class="icon-menu"></i></a>
 	</div>
-	<div class="search-box">
+	<div class="search-box blur">
 		<div class="select">
 			<span>定位中</span>
 			<i class="icon-down"></i>
@@ -63,12 +63,12 @@
 		<i class="icon-worker"></i>
 	</div>
 	<div class="menu-wrapper">
-		<div class="menu-header blur">
+		<div class="menu-header">
 			<a href="./personal_data.html" class='fl'><i class='icon-user'></i></a>
 			<i class="serve">全部服务</i>
 			<i class="icon-X close"></i>
 		</div>
-		<div class="menu-list">
+		<div class="menu-list blur">
 			<a href="#">
 				<i class="icon-repair"></i>
 				<p>机修</p>
@@ -83,6 +83,7 @@
 			</a>
 		</div>
 	</div>
+	<div class="map"></div>
 	<div class="btn-fixed">
 		<a href="./repair_type.html" class="btn btn-default">我要报修</a>
 		<a href="./repair.html" class="btn btn-white btn-bottom">我要接单</a>
