--- a/repaired.html
+++ b/repaired.html
@@ -29,7 +29,7 @@
 			</li>
 			<li class="info-list play-father">
 				<span class="info-left">问题</span>
-				<span class="info-right overflow">不剪线,电脑故障，头卡线，进水，机头卡死不能动,电脑故障，头卡线，进水，机头卡死不能动</span>
+				<span class="info-right autowrap">不剪线,电脑故障，头卡线，进水，机头卡死不能动,电脑故障，头卡线，进水，机头卡死不能动</span>
 				<div class="play play-s play-position">
 					<div class="oval oval-s">
 						<i class="icon-Triangle triangle triangle-s"></i>
@@ -55,6 +55,18 @@
 		</div>
 		<span class="icon-arrow-r more-middle"></span>
 	</a>
+	<ul class="info-wrapper">
+		<li class="info-list">
+			<span class="info-left info-left-width">联系电话</span>
+			<span class="info-right">18712345678</span>
+		</li>
+	</ul>
+	<ul class="info-wrapper">
+		<li class="info-list">
+			<span class="info-left info-left-width">到达时间</span>
+			<span class="info-right">2017-10-25 18:30</span>
+		</li>
+	</ul>
 	<div class="p-title">报修人</div>
 	<ul class="info-wrapper">
 		<li class="info-list">
