增加了点击或侧滑显示(隐藏)用户信息栏 增加了信息提示框自动消失功能，增加了图片删除按钮，优化了报修问题的显示方式以及其他页面的细节调整

--- a/build_worksheet.html
+++ b/build_worksheet.html
@@ -52,6 +52,7 @@
 	<ul class="upload-s-wrapper clearfix">
 		<li class="upload-s-content">
 			<img src="./images/cloth.png" class="product-p">
+			<i class="icon-X close"></i>
 		</li>
 		<li class="upload-s-content">
 			<label for="upload">
