--- a/my_order.html
+++ b/my_order.html
@@ -22,7 +22,7 @@
 		<ul class="info-wrapper bg-white">
 			<li class="info-list">
 				<span class="info-item">单针平缝机</span>
-				<a tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></a>
+				<i tabindex="0" role='button' class="icon-i istyle" data-placement="top" data-toggle="popover" data-trigger="focus" data-content="120元/天"></i>
 				<span class='fr eqm-text'>X5</span>
 				<span class='fr eqm-text'>9成新</span>
 			</li>
