--- a/order.html
+++ b/order.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class='nav-wrapper clearfix'>
-		<a href="./personal_data.html" class='nav-item fl'><i class='icon-user'></i></a>
+		<a href="javascrit:;" class='nav-item fl user-control'><i class='icon-user'></i></a>
 		<a href="./position.html" class='nav-item fl'>机修</a>
 		<a href="./lease.html" class='nav-item fl'>租赁</a>
 		<a href="./order.html" class='nav-item fl nav-item-active'>订单</a>
@@ -45,7 +45,70 @@
 		</div>
 	</div>
 
+	<div class="user-wrapper">
+		<div class="user-mask"></div>
+		<div class="user-info">
+			<a href="./personal_data.html" class="user">
+				<img src="./images/avatar2.0.png" alt="" class="avatar2">
+				<div class="name">李雷</div>
+				<p class="user-text">
+					<span><i class="icon-confirm"></i>个人认证</span>
+					<span><i class="icon-confirm"></i>公司认证</span>
+				</p>
+			</a>
+			<ul>
+				<li>
+					<a href="./company_info.html">
+						<i class="icon-tmp-1"></i>
+						<span>企业信息</span>
+					</a>
+				</li>
+				<li>
+					<a href="./address_list.html">
+						<i class="icon-tmp-2"></i>
+						<span>地址管理</span>
+					</a>
+				</li>
+				<li>
+					<a href="./account.html">
+						<i class="icon-tmp-3"></i>
+						<span>我的账户</span>
+					</a>
+				</li>
+				<li>
+					<a href="./my_order.html">
+						<i class="icon-tmp-4"></i>
+						<span>我的订单</span>
+					</a>
+				</li>
+				<li>
+					<a href="./temporary.html">
+						<i class="icon-tmp-5"></i>
+						<span>暂存订单</span>
+					</a>
+				</li>
+				<li>
+					<a href="./order_for_repirer.html">
+						<i class="icon-my-order"></i>
+						<span>我的工单</span>
+					</a>
+				</li>
+			</ul>
+			<div class="user-c clearfix">
+				<a href='./message.html' class="fl">
+					<i class="icon-massage"></i>
+					<p>消息</p>
+				</a>
+				<a href='./set.html' class="fr">
+					<i class="icon-set"></i>
+					<p>设置</p>
+				</a>
+			</div>
+		</div>
+	</div>
+
 	<script type="text/javascript" src="./js/jquery_3.1.1.js"></script>
 	<script type="text/javascript" src="./js/public.js"></script>
+
 </body>
 </html>
