--- a/repair_brand.html
+++ b/repair_brand.html
@@ -16,13 +16,13 @@
 	</div>
 	<ul class="info-wrapper">
 		<li class="info-list info-p-i">
-			<a href="javascript:;" class="info-item">兄弟</a>
-		</li>
-		<li class="info-list info-p-i selected">
-			<a href="javascript:;" class="info-item">标准</a>
+			<a href="./repair_model.html" class="info-item">兄弟</a>
 		</li>
 		<li class="info-list info-p-i">
-			<a href="javascript:;" class="info-item">海菱</a>
+			<a href="./repair_model.html" class="info-item">标准</a>
+		</li>
+		<li class="info-list info-p-i">
+			<a href="./repair_model.html" class="info-item">海菱</a>
 		</li>
 		<li class="info-list info-p-i">
 			<a href="./repair_model.html" class="info-item">飞马</a>
