--- a/repair_detail_voice.html
+++ b/repair_detail_voice.html
@@ -22,7 +22,7 @@
 		<div class="speak-box-c recode" >
 			<div class="play play-b">
 					<div class="oval oval-b">
-						<i class="icon-speak triangle speak"></i>
+						<i class="icon-speak icon-center speak"></i>
 						<div class="preloader_1">
 							<span></span>
 							<span></span>
@@ -47,7 +47,7 @@
 			<div class="speak-box fr ">
 				<div class="play play-b">
 					<div class="oval oval-b">
-						<i class="icon-speak triangle speak"></i>
+						<i class="icon-speak icon-center speak"></i>
 						<div class="preloader_1">
 							<span></span>
 							<span></span>
