--- a/repaired.html
+++ b/repaired.html
@@ -27,12 +27,14 @@
 				<span class="info-left">型号</span>
 				<span class="info-right">F7300A</span>
 			</li>
-			<li class="info-list play-father">
-				<span class="info-left">问题</span>
-				<span class="info-right autowrap">不剪线,电脑故障，头卡线，进水，机头卡死不能动,电脑故障，头卡线，进水，机头卡死不能动</span>
-				<div class="play play-s play-position">
-					<div class="oval oval-s">
-						<i class="icon-Triangle triangle triangle-s"></i>
+			<li class="info-list">
+				<span class="info-left vl-t">问题</span>
+				<div class="autowrap">
+					<span>不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不</span>
+					<div class="play play-s fr">
+						<div class="oval oval-s">
+							<i class="icon-Triangle triangle triangle-s"></i>
+						</div>
 					</div>
 				</div>
 			</li>
