--- a/neutral.html
+++ b/neutral.html
@@ -11,11 +11,15 @@
 <body>
 	<div class="info-wrapper verify">
 		<div class="info-list">
-			<label for='date' class='info-list'>
-				<span class="info-left">接单档期</span>
-				<span class="time-container"></span>
-				<span class="icon-arrow-r more"></span>
-				<input type="date" class="date" id="date" style="opacity: 0;">
+			<span class="info-left">接单档期</span>
+			<label for='date-1'>
+				<span class="time-container hui">2017-10-20</span>
+				<input type="date" class="date" id="date-1" style="opacity: 0;">
+			</label>
+			<span class='timeto'>至</span>
+			<label for='date-2'>
+				<span class="time-container hui">2017-10-27</span>
+				<input type="date" class="date" id="date-2" style="opacity: 0;">
 			</label>
 		</div>
 	</div>
