--- a/waiting_repair.html
+++ b/waiting_repair.html
@@ -27,12 +27,14 @@
 				<span class="info-left">型号</span>
 				<span class="info-right">F7300A</span>
 			</li>
-			<li class="info-list play-father">
-				<span class="info-left">问题</span>
-				<span class="info-right overflow">不剪线</span>
-				<div class="play play-s play-position">
-					<div class="oval oval-s">
-						<i class="icon-Triangle triangle triangle-s"></i>
+			<li class="info-list">
+				<span class="info-left vl-t">问题</span>
+				<div class="autowrap">
+					<span>不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不剪线不</span>
+					<div class="play play-s fr">
+						<div class="oval oval-s">
+							<i class="icon-Triangle triangle triangle-s"></i>
+						</div>
 					</div>
 				</div>
 			</li>
@@ -79,8 +81,10 @@
 		</li>
 		<li class="info-list repair-addr">
 			<span class="info-left info-left-width">报修地址</span>
-			<span class="info-right">福建省 石狮市 服装城总部大厦二楼大门右拐执行第4排工位</span>
-			<button class='btn btn-s position'>定位</button>
+			<span class="info-right">
+				福建省 石狮市 服装城总部大厦二楼大门右拐执行第4排工位
+				<button class='btn btn-s position'>定位</button>
+			</span>
 		</li>
 	</ul>
 	<div class="clearfix cost">
